[gd_scene load_steps=8 format=3 uid="uid://d2bo8gkun5wir"]

[ext_resource type="Script" path="res://Scenes/Interactables/Door/locked_door.gd" id="1_y2lfn"]
[ext_resource type="Texture2D" uid="uid://7r5fk518xyh" path="res://Sprites/MiscTextures/LockedDoor.png" id="2_71ugl"]
[ext_resource type="Texture2D" uid="uid://dphqd5skdn8wf" path="res://Sprites/MiscTextures/UnlockedDoor.png" id="3_ms5sd"]
[ext_resource type="AudioStream" uid="uid://lc2daqvxcnwy" path="res://Audio/door_unlock.wav" id="4_xgqjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_61br6"]
size = Vector2(16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ooqbf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_71ugl")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ms5sd")
}],
"loop": false,
"name": &"unlock",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sempx"]
size = Vector2(24, 34)

[node name="LockedDoor" type="StaticBody2D" groups=["door", "obstacles"]]
collision_layer = 21
collision_mask = 21
script = ExtResource("1_y2lfn")

[node name="door_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_61br6")

[node name="door_sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1, 2)
sprite_frames = SubResource("SpriteFrames_ooqbf")

[node name="key_collect" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="key_collider" type="CollisionShape2D" parent="key_collect"]
shape = SubResource("RectangleShape2D_sempx")

[node name="unlock_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xgqjc")

[connection signal="body_entered" from="key_collect" to="." method="_on_key_collect_body_entered"]
